@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-01T08:20:20Z",
-  "count_outdated" : 365,
-  "uniques_outdated" : 209,
-  "count" : 390,
-  "uniques" : 225,
+  "timestamp" : "2022-07-01T16:23:44Z",
+  "count_outdated" : 366,
+  "uniques_outdated" : 210,
+  "count" : 392,
+  "uniques" : 226,
   "clones" : [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 3,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
