@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 3,
+  "count": 26,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 3,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
